# breakword

./: .gitignore  README.md  pyproject.toml  setup.py
breakword/: __init__.py  common_words.py
examples/: demo.py  demo2.py
src/breakword/: __init__.py  common_words.py
