[project]
name = "breakword"
version = "0.3.2"
description = "Mixing breakpoints with print debugging."
authors = [
    { name = "Olivier Breuleux", email = "breuleux@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Debuggers",
]
keywords = ["debug", "breakpoint", "print"]
dependencies = []

[project.urls]
Repository = "https://github.com/breuleux/breakword"
Homepage = "https://github.com/breuleux/breakword"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
